# OpenQuantArena

./: .env.example  .gitignore  ARCHITECTURE_NEXTJS.md  BACKLOG_TICKETS.md  Dockerfile  PRODUCT_V1.md  README.md  SPEC_AGENT_V1.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_predictive_arena_v1.py  0003_seed_single_arena_v1.py  0004_score_history.py
app/: main.py  models.py  pred_models.py  pred_models_history.py  schemas.py
app/api/: deps.py  routes.py  routes_auth.py  routes_backtests.py  routes_leaderboard.py  routes_pred_agents.py  routes_pred_arena.py  routes_pred_leaderboard.py  routes_strategies.py
app/core/: config.py  security.py
app/db/: session.py  sync.py
app/worker/: beat.py  celery_app.py  polymarket.py  pred_celery_tasks.py  pred_tasks.py  tasks.py
docs/: index.html
tests/: test_health.py
web/: DB_MIGRATION_INIT_V1_INSTRUCTIONS.md  package-lock.json  package.json  vercel.json
web/data/: markets_v1.json
web/prisma/: migration_init_v1.sql  patch_add_snapshotAt.sql  patch_prediction_index_market_agent_createdAt.sql  schema.prisma
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/app/: layout.tsx  page.tsx
web/src/app/leaderboard/: page.tsx
web/src/app/login/: page.tsx
web/src/app/register/: page.tsx
web/src/components/: AuthGate.tsx  LogoutButton.tsx  SiteHeader.tsx
web/src/lib/: api.ts
web/src/server/: auth.ts  cron.ts  db.ts  env.ts  markets.ts  scoringSpec.ts  socialKit.ts
web/src/server/pipeline/: agentClient.ts
(+15 files in other folders)
